--- a/src/blocks/ingredients/styles/editor.scss
+++ b/src/blocks/ingredients/styles/editor.scss
@@ -5,7 +5,7 @@
  * which makes it higher in priority.
  */
 
-.wp-block-wpzoom-recipe-card-block-ingredients p.help, 
+.wp-block-wpzoom-recipe-card-block-ingredients p.help,
 .wp-block-wpzoom-recipe-card-block-ingredients p.description {
 	font-size: 13px !important;
 	margin-top: 0;
@@ -14,15 +14,15 @@
 
 .wp-block-wpzoom-recipe-card-block-ingredients {
 	.ingredient-item {
-		position: relative;
 		list-style-type: none;
+		position: relative;
 
 		.editor-rich-text {
 			display: inline-block;
 			width: 93%;
 		}
 		.ingredient-item-group-title {
-			font-weight: bold;
+			font-weight: 700;
 		}
 	}
 	.ingredients-list > li {
@@ -30,7 +30,7 @@
 
 		.ingredient-item-name {
 			&:hover {
-			    text-decoration: none !important;
+				text-decoration: none !important;
 			}
 		}
 	}
@@ -46,16 +46,16 @@
 			display: inline-flex;
 		}
 	}
-	.ingredient-buttons button.components-icon-button:not(:disabled):not([aria-disabled=true]):not(.is-default):hover,
-	.ingredient-item-button-container button.components-icon-button:not(:disabled):not([aria-disabled=true]):not(.is-default):hover {
-	    color: #191e23;
-	    box-shadow: none
+	.ingredient-buttons button.components-icon-button:not(:disabled):not([aria-disabled="true"]):not(.is-default):hover,
+	.ingredient-item-button-container button.components-icon-button:not(:disabled):not([aria-disabled="true"]):not(.is-default):hover {
+		box-shadow: none;
+		color: #191e23;
 	}
-	.ingredient-item-button-container button.ingredient-item-button-delete:not(:disabled):not([aria-disabled=true]):not(.is-default):hover {
+	.ingredient-item-button-container button.ingredient-item-button-delete:not(:disabled):not([aria-disabled="true"]):not(.is-default):hover {
 		color: #a00;
 	}
-	.ingredient-item-button-container button.components-icon-button:not(:disabled):not([aria-disabled=true]):not(.is-default):hover,
-	.ingredient-buttons .components-icon-button:not(:disabled):not([aria-disabled=true]):not(.is-default):hover {
+	.ingredient-item-button-container button.components-icon-button:not(:disabled):not([aria-disabled="true"]):not(.is-default):hover,
+	.ingredient-buttons .components-icon-button:not(:disabled):not([aria-disabled="true"]):not(.is-default):hover {
 		background-color: #ece8c8;
 	}
 
@@ -68,9 +68,11 @@
 #wpwrap .edit-post-visual-editor .wp-block-wpzoom-recipe-card-block-ingredients .wpzoom-recipe-card-print-link a {
 	color: #a0a0a0;
 }
+
 #wpwrap .edit-post-visual-editor .wp-block-wpzoom-recipe-card-block-ingredients p {
 	margin-bottom: 0;
 }
+
 #wpwrap .edit-post-visual-editor .wp-block-wpzoom-recipe-card-block-ingredients ul,
 #wpwrap .edit-post-visual-editor .wp-block-wpzoom-recipe-card-block-ingredients ol {
 	margin: 0;
