--- a/src/blocks/ingredients/styles/style.scss
+++ b/src/blocks/ingredients/styles/style.scss
@@ -4,104 +4,104 @@
  * CSS for both Frontend+Backend.
  */
 .wp-block-wpzoom-recipe-card-block-ingredients {
-    position: relative;
-    color: #736458;
-    background-color: #FBF9E7;
-    border-radius: 3px;
-    margin: 0 0 20px;
-    padding: 30px;
-    text-align: left;
-    max-width: 750px;
+	background-color: #fbf9e7;
+	border-radius: 3px;
+	color: #736458;
+	margin: 0 0 20px;
+	max-width: 750px;
+	padding: 30px;
+	position: relative;
+	text-align: left;
 
-    .wpzoom-recipe-card-print-link {
-        position: absolute;
-        right: 30px;
-        top: 30px;
-        text-align: right;
-        z-index: 1;
+	.wpzoom-recipe-card-print-link {
+		position: absolute;
+		right: 30px;
+		text-align: right;
+		top: 30px;
+		z-index: 1;
 
-        a {
-            display: inline-block;
-            text-decoration: none;
-            color: #a0a0a0;
-        }
+		a {
+			color: #a0a0a0;
+			display: inline-block;
+			text-decoration: none;
+		}
 
-        .icon-print-link {
-            display: inline-block;
-            vertical-align: text-top;
-            width: 18px;
-            margin-right: 5px;
-        }
+		.icon-print-link {
+			display: inline-block;
+			margin-right: 5px;
+			vertical-align: text-top;
+			width: 18px;
+		}
 
-        &.hidden {
-            display: none;
-        }
-        &.visible {
-            display: block;
-        }
-    }
+		&.hidden {
+			display: none;
+		}
+		&.visible {
+			display: block;
+		}
+	}
 
-    @include recipe-sections-title( inherit, uppercase, 'ingredients-title' );
+	@include recipe-sections-title( inherit, uppercase, "ingredients-title" );
 
-    .ingredients-list {
-        margin: 0 !important;
-        padding: 0 !important;
-        list-style: none;
+	.ingredients-list {
+		list-style: none;
+		margin: 0 !important;
+		padding: 0 !important;
 
-        > li {
-            list-style: none;
-            padding: 0 0 13px;
-            margin: 0 0 13px;
-            border-bottom: 1px solid #e9e5c9;
-            position: relative;
-            cursor: pointer;
-            line-height: 1.7;
+		> li {
+			border-bottom: 1px solid #e9e5c9;
+			cursor: pointer;
+			line-height: 1.7;
+			list-style: none;
+			margin: 0 0 13px;
+			padding: 0 0 13px;
+			position: relative;
 
-            .ingredient-item-name {
-                display: inline-block;
-                margin: 0;
-                vertical-align: middle;
+			.ingredient-item-name {
+				display: inline-block;
+				margin: 0;
+				vertical-align: middle;
 
-                &.is-strikethrough-active:hover {
-                    text-decoration: line-through;
-                }
-            }
+				&.is-strikethrough-active:hover {
+					text-decoration: line-through;
+				}
+			}
 
-            &::before {
-                content: '';
-                display: inline-block;
-                vertical-align: middle;
-                width: 18px;
-                height: 18px;
-                margin: 0 10px 0 0;
-                border-radius: 50%;
-                border: 2px solid #DEDAB6;
-                cursor: pointer;
-                position: relative;
-            }
+			&::before {
+				border: 2px solid #dedab6;
+				border-radius: 50%;
+				content: "";
+				cursor: pointer;
+				display: inline-block;
+				height: 18px;
+				margin: 0 10px 0 0;
+				position: relative;
+				vertical-align: middle;
+				width: 18px;
+			}
 
-            &.ingredient-item-group {
-                cursor: initial;
-            }
-            &.ingredient-item-group::before {
-                display: none;
-            }
+			&.ingredient-item-group {
+				cursor: initial;
+			}
+			&.ingredient-item-group::before {
+				display: none;
+			}
 
-            &.ticked .ingredient-item-name {
-                &.is-strikethrough-active {
-                    text-decoration: line-through;
-                }
-            }
+			&.ticked .ingredient-item-name {
+				&.is-strikethrough-active {
+					text-decoration: line-through;
+				}
+			}
 
-            &.ticked::before {
-                border: 2px solid #9AD093;
-                background: #9AD093;
+			&.ticked::before {
+				background: #9ad093;
+				border: 2px solid #9ad093;
 
-                -webkit-box-shadow: inset 0px 0px 0px 2px #FBF9E7;
-                -moz-box-shadow: inset 0px 0px 0px 2px #FBF9E7;
-                box-shadow: inset 0px 0px 0px 2px #FBF9E7;
-            }
-        }
+				-webkit-box-shadow: inset 0 0 0 2px #fbf9e7;
+				-moz-box-shadow: inset 0 0 0 2px #fbf9e7;
+				box-shadow: inset 0 0 0 2px #fbf9e7;
+			}
+		}
 
-    }
+	}
 }
