--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -1,3 +1,3 @@
-@import '../common';
-@import '../components/**/editor.scss';
-@import '../blocks/**/editor.scss';
+@import "../common";
+@import "../components/**/editor.scss";
+@import "../blocks/**/editor.scss";
