--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,2 @@
-@import '../common';
-@import '../components/**/style.scss';
-@import '../blocks/**/style.scss';
+@import "../common";
+@import "../blocks/**/style.scss";
